Bug 90399 - [BDW Regression]igt/gem_evict_everything/swapping-interruptible causes WARNING: CPU: 1 PID: 5066 at drivers/gpu/drm/i915/i915_gem_gtt.c:760 gen8_alloc_va_range+0x10c/0x6c7 [i915]
Summary: [BDW Regression]igt/gem_evict_everything/swapping-interruptible causes WARNIN...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high normal
Assignee: Mika Kuoppala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-11 07:20 UTC by lu hua
Modified: 2017-08-14 08:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (124.77 KB, text/plain)
2015-05-11 07:20 UTC, lu hua
no flags Details
drm/i915/gtt: Fix the boundary check for vm area (1.64 KB, patch)
2015-05-11 09:40 UTC, Mika Kuoppala
no flags Details | Splinter Review

Description lu hua 2015-05-11 07:20:46 UTC
Created attachment 115686 [details]
dmesg

==System Environment==
--------------------------
Regression: yes

good commit:75d04a3773ecee617847de963ae4195d6aa74c28
bad commit: c457879f0d8f664050e46092afde46fec58c9e67

Non-working platforms: BDW

==kernel==
--------------------------
drm-intel-nightly/a1e469d124cad96cd0d0e149c84f7ebd43ca1893
commit a1e469d124cad96cd0d0e149c84f7ebd43ca1893
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Fri May 8 17:48:23 2015 +0200

    drm-intel-nightly: 2015y-05m-08d-15h-47m-50s UTC integration manifest

==Bug detailed description==
-----------------------------
It causes Warning: WARNING: CPU: 1 PID: 5066 at drivers/gpu/drm/i915/i915_gem_gtt.c:760 gen8_alloc_va_range+0x10c/0x6c7 [i915]()
gem_evict_everything@swapping-normal also has this issue.

output:
IGT-Version: 1.10-g9b0a32d (x86_64) (Linux: 4.1.0-rc2_drm-intel-nightly_a1e469_20150509+ x86_64)
Subtest swapping-interruptible: SUCCESS (55.949s)

Dmesg:
[  346.480334] WARNING: CPU: 1 PID: 5066 at drivers/gpu/drm/i915/i915_gem_gtt.c:760 gen8_alloc_va_range+0x10c/0x6c7 [i915]()
[  346.480336] WARN_ON((start + length) >= (1ULL << 32))
[  346.480337] Modules linked in: ipv6 dm_mod iTCO_wdt iTCO_vendor_support ppdev snd_hda_codec_hdmi pcspkr i2c_i801 snd_hda_intel lpc_ich snd_hda_codec mfd_core snd_hda_core snd
_hwdep snd_pcm snd_timer snd soundcore battery parport_pc parport ac acpi_cpufreq i915 button video drm_kms_helper drm
[  346.480353] CPU: 1 PID: 5066 Comm: gem_evict_every Tainted: G        W       4.1.0-rc2_drm-intel-nightly_a1e469_20150509+ #398
[  346.480355]  0000000000000000 0000000000000009 ffffffff817a66cc ffff88000283b9d8
[  346.480357]  ffffffff8103ebde 0000000000000001 ffffffffa0099c8f ffff880149644fe0
[  346.480359]  ffff880002696000 0000000100000000 0000000000000020 ffffffffa012451e
[  346.480362] Call Trace:
[  346.480367]  [<ffffffff817a66cc>] ? dump_stack+0x40/0x50
[  346.480376]  [<ffffffff8103ebde>] ? warn_slowpath_common+0x98/0xb0
[  346.480393]  [<ffffffffa0099c8f>] ? gen8_alloc_va_range+0x10c/0x6c7 [i915]
[  346.480400]  [<ffffffff8103ec3b>] ? warn_slowpath_fmt+0x45/0x4a
[  346.480417]  [<ffffffffa0099c8f>] ? gen8_alloc_va_range+0x10c/0x6c7 [i915]
[  346.480434]  [<ffffffffa009c9f3>] ? i915_gem_object_get_pages_gtt+0x23f/0x36e [i915]
[  346.480449]  [<ffffffffa009bf73>] ? i915_vma_bind+0x10b/0x151 [i915]
[  346.480465]  [<ffffffffa00a1a57>] ? i915_gem_object_do_pin+0x70e/0x7e0 [i915]
[  346.480482]  [<ffffffffa0095dc3>] ? i915_gem_execbuffer_reserve_vma.isra.12+0x6b/0x111 [i915]
[  346.480496]  [<ffffffffa00960b5>] ? i915_gem_execbuffer_reserve+0x24c/0x2e3 [i915]
[  346.480510]  [<ffffffffa0096714>] ? i915_gem_do_execbuffer.isra.13+0x5c8/0xd6c [i915]
[  346.480519]  [<ffffffff8110a213>] ? alloc_pages_current+0xad/0xca
[  346.480525]  [<ffffffff810ef751>] ? kmalloc_order+0x10/0x3d
[  346.480529]  [<ffffffff810ef79a>] ? kmalloc_order_trace+0x1c/0x7e
[  346.480543]  [<ffffffffa0097e42>] ? i915_gem_execbuffer2+0x16e/0x208 [i915]
[  346.480556]  [<ffffffffa0004636>] ? drm_ioctl+0x322/0x38d [drm]
[  346.480559]  [<ffffffff810471c2>] ? __set_task_blocked+0x5d/0x64
[  346.480570]  [<ffffffffa0097cd4>] ? i915_gem_execbuffer+0x339/0x339 [i915]
[  346.480573]  [<ffffffff81123502>] ? do_vfs_ioctl+0x360/0x424
[  346.480575]  [<ffffffff8111604b>] ? __fput+0x184/0x19a
[  346.480577]  [<ffffffff8112360f>] ? SyS_ioctl+0x49/0x7a
[  346.480580]  [<ffffffff817ac217>] ? system_call_fastpath+0x12/0x6a
[  346.480582] ---[ end trace 34f9258a083cee05 ]---
[  347.029922] ------------[ cut here ]------------


==Reproduce steps==
---------------------------- 
1.  ./gem_evict_everything --run-subtest swapping-interruptible
Comment 1 Mika Kuoppala 2015-05-11 09:40:21 UTC
Created attachment 115696 [details] [review]
drm/i915/gtt: Fix the boundary check for vm area
Comment 2 lu hua 2015-05-12 06:03:12 UTC
(In reply to Mika Kuoppala from comment #1)
> Created attachment 115696 [details] [review] [review]
> drm/i915/gtt: Fix the boundary check for vm area

Fixed by this patch.
Comment 3 lu hua 2015-05-13 07:07:49 UTC
Verified.Fixed.
Comment 4 Jari Tahvanainen 2017-08-14 08:35:42 UTC
Moving old bug from Verified to Closed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.